--- a/index.html
+++ b/index.html
@@ -2,86 +2,7 @@
 <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 <html>
   <head>
-      <style>
-          html {
-          margin: 0px;
-          padding: 0px;
-          background: black;
-          font-size: 12px;
-        }
-
-        #container{
-          max-width: 960px;
-          margin:auto;
-          background: black;
-        }
-
-        #img-div{
-          padding: 20px 10px 20px 10px;
-          background-color:teal;
-        }
-
-        img {
-          max-width: 100%;
-          display: block;
-          height: auto;
-          margin: 0 auto;
-        }
-
-        body {
-          /* Native font stack https://getbootstrap.com/docs/4.2/content/reboot/#native-font-stack */
-          font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Helvetica Neue", Arial, sans-serif;
-          font-size: 1.6rem;
-          line-height: 1.5;
-          text-align: center;
-          color: #FFF;
-          margin: 0px;
-        }
-
-        ul {
-          list-style-type: none;
-          text-align:left;
-          margin: auto;
-          max-width: 500px;
-          text-align: left;
-          line-height: 1.6;
-        }
-
-        li:before {   
-            content: '';   
-            display: inline-block;
-            height: 40px;   
-            width: 40px;
-            background-size: 10px;   
-            background-image: url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRv9Z1RSP0Sd1fvzhwL3h4Op0KRQP6otmhp7hlWNM6T_2JiIlDldw&s"); 
-            background-repeat: no-repeat;   
-            margin-right: 10px;
-            background-position: center center;
-            vertical-align: middle;
-        }
-
-        blockquote {
-          font-style: italic;
-          max-width: 545px;
-          margin: 0 auto 70px auto;
-          text-align: left;
-        }
-
-        a{
-          text-decoration: none;
-          color:yellow
-        }
-
-        a:hover {
-          color:orange;
-        }
-        a:active{
-          color:green;
-        }
-        a:visited{
-          color:red;
-        }
-    </style>
+       <link rel="stylesheet" href="styles.css">
   </head>
   <div id="container">
     <body class="body"> 
